<resources>
    <string name="app_name">MyNote</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_note">Save Note</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="welcome_message">Welcome to our application</string>
</resources>